// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs matches snapshot (global) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #FFFFFF;
  font-weight: var(--font-semi-bold);
}

.c3::after {
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
  bottom: 0;
}

.c3::after {
  background-color: #006296;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c3:focus:not(:focus-visible) {
  box-shadow: none;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666e;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6::after {
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
  bottom: 0;
}

.c6:active {
  color: #1B1C1E;
  font-weight: var(--font-semi-bold);
}

.c6:active::after {
  background-color: #003A5A !important;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c6:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -1px;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -1px;
  position: relative;
}

.c5:hover .c2::after {
  background-color: #DBDEE1;
}

.c4::after {
  content: attr(data-content);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  visibility: hidden;
}

.c7 {
  border: none;
  border-top: none;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c7:focus:not(:focus-visible) {
  box-shadow: none;
}

.c0 {
  border-bottom: 1px solid #DBDEE1;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-half);
  min-height: var(--size-2halfx);
  padding: 0;
}

<div>
  <div
    aria-label="tabs label"
    class="c0"
    role="tablist"
  >
    <div
      class="c1"
      data-testid="tab-button-1"
    >
      <button
        aria-controls="uuid1"
        aria-selected="true"
        class="c2 c3"
        data-testid="tab-button"
        id="tab-1"
        role="tab"
        type="button"
      >
        <span
          class="c4"
          data-content="button 1"
          data-testid="tab-button-text"
        >
          button 1
        </span>
      </button>
    </div>
    <div
      class="c5"
      data-testid="tab-button-2"
    >
      <button
        aria-controls="uuid2"
        aria-selected="false"
        class="c2 c6"
        data-testid="tab-button"
        id="tab-2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span
          class="c4"
          data-content="button 2"
          data-testid="tab-button-text"
        >
          button 2
        </span>
      </button>
    </div>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="tab-1"
    class="c7"
    id="uuid1"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-1"
    >
      content
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="tab-2"
    class="c7"
    hidden=""
    id="uuid2"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-2"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Tabs matches snapshot (mobile) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #FFFFFF;
  font-weight: var(--font-semi-bold);
}

.c3::after {
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
  top: 0;
}

.c3::after {
  background-color: #006296;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c3:focus:not(:focus-visible) {
  box-shadow: none;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666e;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6::after {
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
  top: 0;
}

.c6:active {
  color: #1B1C1E;
  font-weight: var(--font-semi-bold);
}

.c6:active::after {
  background-color: #003A5A !important;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c6:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -1px;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -1px;
  position: relative;
}

.c5:hover .c2::after {
  background-color: #DBDEE1;
}

.c4::after {
  content: attr(data-content);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  visibility: hidden;
}

.c7 {
  border: none;
  border-radius: 0 0 var(--border-radius-2x) var(--border-radius-2x);
  border-top: none;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c7:focus:not(:focus-visible) {
  box-shadow: none;
}

.c0 {
  background: #F1F2F2;
  border-bottom: 1px solid #DBDEE1;
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-half);
  min-height: var(--size-2halfx);
  padding: 0 0 0 var(--spacing-4x);
}

<div>
  <div
    aria-label="tabs label"
    class="c0"
    role="tablist"
  >
    <div
      class="c1"
      data-testid="tab-button-1"
    >
      <button
        aria-controls="uuid1"
        aria-selected="true"
        class="c2 c3"
        data-testid="tab-button"
        id="tab-1"
        role="tab"
        type="button"
      >
        <span
          class="c4"
          data-content="button 1"
          data-testid="tab-button-text"
        >
          button 1
        </span>
      </button>
    </div>
    <div
      class="c5"
      data-testid="tab-button-2"
    >
      <button
        aria-controls="uuid2"
        aria-selected="false"
        class="c2 c6"
        data-testid="tab-button"
        id="tab-2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span
          class="c4"
          data-content="button 2"
          data-testid="tab-button-text"
        >
          button 2
        </span>
      </button>
    </div>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="tab-1"
    class="c7"
    id="uuid1"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-1"
    >
      content
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="tab-2"
    class="c7"
    hidden=""
    id="uuid2"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-2"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Tabs matches snapshot 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #FFFFFF;
  font-weight: var(--font-semi-bold);
}

.c3::after {
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
  top: 0;
}

.c3::after {
  background-color: #006296;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c3:focus:not(:focus-visible) {
  box-shadow: none;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666e;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6::after {
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
  top: 0;
}

.c6:active {
  color: #1B1C1E;
  font-weight: var(--font-semi-bold);
}

.c6:active::after {
  background-color: #003A5A !important;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c6:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -1px;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -1px;
  position: relative;
}

.c5:hover .c2::after {
  background-color: #DBDEE1;
}

.c4::after {
  content: attr(data-content);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  visibility: hidden;
}

.c7 {
  border: none;
  border-radius: 0 0 var(--border-radius-2x) var(--border-radius-2x);
  border-top: none;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c7:focus:not(:focus-visible) {
  box-shadow: none;
}

.c0 {
  background: #F1F2F2;
  border-bottom: 1px solid #DBDEE1;
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-half);
  min-height: var(--size-2halfx);
  padding: 0 0 0 var(--spacing-4x);
}

<div>
  <div
    aria-label="tabs label"
    class="c0"
    role="tablist"
  >
    <div
      class="c1"
      data-testid="tab-button-1"
    >
      <button
        aria-controls="uuid1"
        aria-selected="true"
        class="c2 c3"
        data-testid="tab-button"
        id="tab-1"
        role="tab"
        type="button"
      >
        <span
          class="c4"
          data-content="button 1"
          data-testid="tab-button-text"
        >
          button 1
        </span>
      </button>
    </div>
    <div
      class="c5"
      data-testid="tab-button-2"
    >
      <button
        aria-controls="uuid2"
        aria-selected="false"
        class="c2 c6"
        data-testid="tab-button"
        id="tab-2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span
          class="c4"
          data-content="button 2"
          data-testid="tab-button-text"
        >
          button 2
        </span>
      </button>
    </div>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="tab-1"
    class="c7"
    id="uuid1"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-1"
    >
      content
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="tab-2"
    class="c7"
    hidden=""
    id="uuid2"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-2"
    >
      content
    </div>
  </div>
</div>
`;
